# notecognito

./: .gitignore  Notecognito program outline.docx  build-all.sh  outline.docx
app/: index.html  main.js  package.json  preload.js  readme.md  renderer.js  structure.md  test-ipc.js
core/: Cargo.toml  build.sh  cbindgen.toml  notecognito-project-structure.md  notecognito.h  readme.md
core/src/: config.rs  error.rs  ffi.rs  ipc.rs  lib.rs  notecard.rs  platform.rs
macos/: Cargo.toml  build.sh  implementation.md  readme.md
macos/assets/: icon.icns  readme.md
macos/src/: app_delegate.rs  hotkey.rs  main.rs  notecard_window.rs  platform_impl.rs
win/: build.rs  implementation.md
win/src/: main.rs  notecard_window.rs  platform_impl.rs
windows/: Cargo.toml  build.bat  build.rs  readme.md
windows/assets/: readme.md
windows/src/: hotkey.rs  ipc_client.rs
