[package]
name = "notecognito-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
notecognito-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["all"] }
objc2-app-kit = { version = "0.2", features = ["all"] }
objc2-core-graphics = "0.3"
block2 = "0.5"
core-foundation = "0.9"
core-graphics = "0.23"
cocoa = "0.25"
dispatch = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # <-- Added features
anyhow = "1.0"
dirs = "5.0"
once_cell = "1.19"  # <-- This was also added

[build-dependencies]
cargo-bundle = "0.6"

[[bin]]
name = "Notecognito"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.bundle]
name = "Notecognito"
identifier = "com.notecognito.macos"
icon = ["assets/icon.icns"]
category = "public.app-category.productivity"
copyright = "Copyright (c) 2024"
short_description = "Quick notecard display"
long_description = "Notecognito displays translucent notecards via global hotkeys"
osx_minimum_system_version = "10.14"

# Required for menu bar app (no dock icon)
[package.metadata.bundle.osx]
LSUIElement = true