[package]
name = "notecognito-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
notecognito-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
windows = { version = "0.52", features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
] }

tray-icon = "0.11"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
anyhow = "1.0"
once_cell = "1.19"

[build-dependencies]
winres = "0.1"
embed-resource = "2.4"

[[bin]]
name = "notecognito"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# Windows-specific settings
[package.metadata.winres]
OriginalFilename = "notecognito.exe"
ProductName = "Notecognito"
FileDescription = "Notecognito - Quick notecard display"
LegalCopyright = "Copyright (c) 2024"